feat(protected-export): pass through every pinnable family, stop content filtering
Per the explicit ruling, the session no longer rejects content just because
the protection surface does not transform it. Glue, ArtPath, alias, physics
and motion-sync settings, embedded morph targets, nonstandard extensions and
host feature flags all ride through untouched, pinned by an expanded model
census (identity, parent edge, ordered references, flags, signatures) and
guarded by post-mutation drift checks. Staged physics3.json setting IDs must
match the census when the user's native checkbox emits it. What still fails
closed: members with no stable GUID/ID, unenumerable references, duplicate
GUIDs, deformer cycles, and any drift — reported as
protected-export.unpinnable-structure:<family>=<count>.

Records regenerated on all three exact builds (5.2.03 157 selectors,
5.3.02/5.3.03 173), VERIFIED_STATIC; probe gains physics-export and
broad-structure variants and drives the remaining rejection surface through
an unpinnable injected ArtPath.

Generated with [Devin](https://devin.ai)

Co-Authored-By: Devin <158243242+devin-ai-integration[bot]@users.noreply.github.com>