@@ -9,12 +9,14 @@ import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HexFormat;
+import java.util.IdentityHashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CountDownLatch;
@@ -459,6 +461,7 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
         session.expectedParameters = parameterExpectations(session.censusBefore);
         session.expectedPartIds = partIdSet(session.censusBefore);
         session.expectedGlueIds = glueIdSet(session.censusBefore);
+        session.expectedPhysicsIds = physicsIdSet(session.censusBefore);
         session.phase = Phase.COPY_BOUND;
     }
 
@@ -585,7 +588,13 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
             // Post-mutation census: parts and parameters must be byte-identical
             // to the bound snapshot (flatten may only drop deformer memberships);
             // every ArtMesh must carry exactly its planned obfuscated identity.
-            verifyPostMutationCensus(session, censusModel(liveSource, OBFUSCATE_FAILED_KEY), plan);
+            final ModelCensus after = censusModel(liveSource, OBFUSCATE_FAILED_KEY);
+            verifyPostMutationCensus(session, after, plan);
+            // The staged key contract reads the post-mutation census: binding
+            // keys legitimately rewrite under flatten (consumed deformers,
+            // non-serializing carriers), so staged key positions are asserted
+            // against the surviving authored union, not the pre-mutation one.
+            session.stagedParameters = parameterExpectations(after);
             return Boolean.TRUE;
         });
         if (!Boolean.TRUE.equals(consistent)) {
@@ -933,8 +942,8 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
         requireSessionAdmittedOnEdt(session, true);
         final ProtectedExportStaging.Validation validation = staging.validate(
             session.stagedPick, session.stagedPaths, session.expectedDrawableIds,
-            session.expectedParameters, session.expectedPartIds,
-            session.expectedGlueIds, session.behavior);
+            session.stagedParameters, session.expectedPartIds,
+            session.expectedGlueIds, session.expectedPhysicsIds, session.behavior);
         if (!validation.valid()) {
             throw new SessionRejection(
                 VALIDATION_FAILED_KEY + ":" + validation.failureKey(),
@@ -1155,15 +1164,28 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
     // Identity census — captured before mutation, enforced after
     // ------------------------------------------------------------------
 
-    /** Part identity: stable GUID keys the map; value holds serialized identity. */
+    /**
+     * Part identity: stable GUID keys the map; value holds serialized identity,
+     * membership, parent edge, clip references and host content flags.
+     */
     private record PartIdentity(
         String id,
         String name,
-        List<String> childGuids
+        List<String> childGuids,
+        String targetDeformerGuid,
+        List<String> referenceGuids,
+        List<String> flags
     ) {
     }
 
-    /** Parameter contract: evaluable range/default/repeat plus baked key union. */
+    /**
+     * Parameter contract: evaluable range/default/repeat plus the authored
+     * bound-key union — every binding position on every carrier. The union
+     * exists for behavior-oracle sampling coverage; it is not the staged moc3
+     * contract (that reads {@link ModelCensus#serializedKeys} post-mutation)
+     * and is excluded from post-mutation identity equality because flatten
+     * legitimately rewrites binding-key disposition.
+     */
     private record ParameterIdentity(
         float min,
         float max,
@@ -1173,40 +1195,151 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
     ) {
     }
 
-    /** ArtMesh identity: serialized name and drawable ID under the stable GUID. */
-    private record ArtMeshIdentity(String name, String drawableId) {
+    /**
+     * ArtMesh identity: serialized name and drawable ID under the stable GUID,
+     * plus the clip-mask references and drawable flags obfuscation must leave
+     * untouched.
+     */
+    private record ArtMeshIdentity(
+        String name,
+        String drawableId,
+        List<String> referenceGuids,
+        List<String> flags
+    ) {
     }
 
     /**
-     * Identity snapshot of one model source: parts keyed by stable GUID, parameters
-     * keyed by ID, ArtMeshes keyed by stable GUID, Glue sources keyed by stable
-     * GUID.
+     * One pass-through census member's pinned identity: family token, ID, local
+     * name, parent edge, ordered reference GUIDs and host content flags. A
+     * pass-through object is never mutated by this session; the pin exists so a
+     * mid-run change of any of these facts — including a reference that stopped
+     * resolving — fails closed. {@code targetDeformerGuid} is the only component
+     * allowed to transition, and only to {@code null}: flatten re-roots objects
+     * whose parent deformer was removed.
+     */
+    private record PassThroughIdentity(
+        String family,
+        String id,
+        String name,
+        String targetDeformerGuid,
+        List<String> referenceGuids,
+        List<String> flags
+    ) {
+    }
+
+    /**
+     * One settings object's pinned identity — a physics or motion-sync setting:
+     * ID, name and an ordered structure signature (enable flag and member counts
+     * for physics; the host's content checksum for motion sync). Settings are
+     * pass-through content; the pin fails closed on any mid-session mutation.
+     */
+    private record SettingsIdentity(
+        String id,
+        String name,
+        List<String> signature
+    ) {
+    }
+
+    /**
+     * Identity snapshot of one model source: parts, ArtMeshes and pass-through
+     * members keyed by stable GUID, parameters keyed by ID, physics and
+     * motion-sync settings keyed by stable GUID, every census member's embedded
+     * content signature, and the host-reported content feature flags.
      */
     private record ModelCensus(
         Map<String, PartIdentity> parts,
         Map<String, ParameterIdentity> parameters,
         Map<String, ArtMeshIdentity> artMeshes,
-        Map<String, GlueIdentity> glues
+        Map<String, PassThroughIdentity> passThrough,
+        Map<String, SettingsIdentity> physicsSettings,
+        Map<String, SettingsIdentity> motionSyncSettings,
+        Map<String, List<String>> embeddedContent,
+        List<String> featureFlags
     ) {
     }
 
     /**
-     * One Glue source's pass-through identity: ID, local name and the ordered
-     * {@code [A, B]} target ArtMesh GUID strings. Glue is never mutated by this
-     * session; the census exists so a mid-run change of any of these facts —
-     * including a reference that stopped resolving — fails closed.
+     * Bounded family token for census diagnostics; degrades to a short
+     * {@code unknown} form when the host cannot classify the member.
      */
-    private record GlueIdentity(String id, String name, List<String> targetGuids) {
+    private String censusFamilyToken(final Object object) {
+        if (object == null) {
+            return "null";
+        }
+        String family;
+        try {
+            family = host.censusFamily(object);
+        } catch (RuntimeException failure) {
+            family = "unknown";
+        }
+        return family == null || family.isBlank() ? "unknown" : family;
     }
 
     /**
-     * Snapshots part, parameter and ArtMesh identities of {@code modelSource}.
-     * Parameter keys are the union of key positions across every object's keyform
-     * bindings for that parameter — the evaluable surface flatten must preserve.
-     * Any unreadable identity fails closed with {@code failureKey}.
+     * Snapshots part, parameter, ArtMesh, pass-through and settings identities of
+     * {@code modelSource}. Parameter keys are the union of key positions across
+     * every object's keyform bindings for that parameter — the evaluable surface
+     * flatten must preserve. Any unreadable identity fails closed with
+     * {@code failureKey}; a census member that cannot be pinned at all rejects
+     * with a bounded {@code unpinnable-structure} detail.
      */
     private ModelCensus censusModel(final Object modelSource, final String failureKey) {
         final Object root = host.rootPart(modelSource);
+        final List<?> objects = host.allObjects(modelSource);
+
+        // Every census member must carry a pinnable identity: controllable source
+        // with a stable GUID and a nonblank ID. Anything else — including families
+        // whose references cannot be enumerated — rejects before any mutation.
+        final Map<String, Integer> unpinnable = new TreeMap<>();
+        final Set<String> seenGuids = new LinkedHashSet<>();
+        final Set<String> duplicateGuids = new LinkedHashSet<>();
+        final Map<Object, String> guidOf = new IdentityHashMap<>();
+        for (Object object : objects) {
+            final String family = censusFamilyToken(object);
+            final boolean pinnableFamily = object != null
+                && (host.isWarpDeformer(object) || host.isRotationDeformer(object)
+                    || host.isArtMeshSource(object) || host.isPartSource(object)
+                    || "glue".equals(family) || "art-path".equals(family)
+                    || "alias".equals(family));
+            String guid = null;
+            if (pinnableFamily && host.isControllableSource(object)) {
+                try {
+                    guid = host.objectGuid(object);
+                    final String id = host.objectIdString(object);
+                    if (guid == null || guid.isBlank() || id == null || id.isBlank()) {
+                        guid = null;
+                    }
+                } catch (RuntimeException unreadable) {
+                    guid = null;
+                }
+            }
+            if (guid == null) {
+                final String key = unpinnable.size() < 12
+                        || unpinnable.containsKey(family) ? family : "other";
+                unpinnable.merge(key, 1, Integer::sum);
+                continue;
+            }
+            guidOf.put(object, guid);
+            if (!seenGuids.add(guid)) {
+                duplicateGuids.add(guid);
+            }
+        }
+        if (!unpinnable.isEmpty()) {
+            final StringBuilder detail =
+                new StringBuilder("protected-export.unpinnable-structure:");
+            for (Map.Entry<String, Integer> entry : unpinnable.entrySet()) {
+                detail.append(entry.getKey()).append('=').append(entry.getValue())
+                    .append(',');
+            }
+            detail.setLength(detail.length() - 1);
+            throw new SessionRejection(failureKey, detail.toString());
+        }
+        if (!duplicateGuids.isEmpty()) {
+            throw new SessionRejection(failureKey,
+                "protected-export.duplicate-guid:"
+                    + String.join(",", new TreeSet<>(duplicateGuids)));
+        }
+
         final Map<String, PartIdentity> parts = new LinkedHashMap<>();
         for (Object part : host.allParts(modelSource)) {
             if (part == null || part == root) {
@@ -1215,19 +1348,22 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
             if (!host.isPartSource(part)) {
                 throw new SessionRejection(failureKey);
             }
-            final String guid = host.objectGuid(part);
+            final String guid = guidOf.getOrDefault(part, host.objectGuid(part));
             final String id = host.objectIdString(part);
             if (guid == null || guid.isBlank() || id == null || id.isBlank()) {
                 throw new SessionRejection(failureKey);
             }
             if (parts.put(guid, new PartIdentity(
                 id, host.objectLocalName(part),
-                List.copyOf(host.partChildGuids(part)))) != null) {
+                List.copyOf(host.partChildGuids(part)),
+                host.sourceTargetDeformerGuid(part),
+                host.passThroughReferenceGuids(part),
+                host.passThroughFlagSignature(part))) != null) {
                 throw new SessionRejection(failureKey);
             }
         }
         final Map<String, java.util.TreeSet<Float>> keyUnion = new LinkedHashMap<>();
-        for (Object object : host.allObjects(modelSource)) {
+        for (Object object : objects) {
             for (Object binding : host.keyformBindings(object)) {
                 final String parameterId = host.keyformBindingParameterId(binding);
                 if (parameterId == null || parameterId.isBlank()) {
@@ -1265,39 +1401,103 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
                 throw new SessionRejection(failureKey);
             }
             if (artMeshes.put(guid, new ArtMeshIdentity(
-                host.objectLocalName(mesh), drawableId)) != null) {
+                host.objectLocalName(mesh), drawableId,
+                host.passThroughReferenceGuids(mesh),
+                host.passThroughFlagSignature(mesh))) != null) {
                 throw new SessionRejection(failureKey);
             }
         }
-        // Glue pass-through channel: pin each admitted Glue's identity and mesh
-        // references so flatten/obfuscation must leave them byte-identical. A
-        // target that does not resolve to a censused ArtMesh is corrupt input,
-        // not a pass-through case.
-        final Map<String, GlueIdentity> glues = new LinkedHashMap<>();
-        for (Object object : host.allObjects(modelSource)) {
-            if (!host.isGlueSource(object)) {
+        // Pass-through channel: every censused member outside the
+        // flatten/obfuscate surface is pinned by identity, parent edge,
+        // references and flags so flatten/obfuscation must leave it unchanged.
+        // A Glue target that does not resolve to a censused ArtMesh is corrupt
+        // input, not a pass-through case.
+        final Map<String, PassThroughIdentity> passThrough = new LinkedHashMap<>();
+        final Map<String, List<String>> embedded = new LinkedHashMap<>();
+        for (Object object : objects) {
+            final String guid = guidOf.get(object);
+            if (guid == null) {
+                continue; // unpinnable members already rejected above
+            }
+            embedded.put(guid,
+                List.copyOf(host.embeddedContentFamilies(object)));
+            if (host.isWarpDeformer(object) || host.isRotationDeformer(object)
+                || host.isArtMeshSource(object) || host.isPartSource(object)) {
                 continue;
             }
-            final String guid = host.objectGuid(object);
-            final String id = host.objectIdString(object);
-            if (guid == null || guid.isBlank() || id == null || id.isBlank()) {
-                throw new SessionRejection(failureKey);
-            }
-            final List<String> targets = host.glueTargetGuids(object);
-            for (String targetGuid : targets) {
-                if (targetGuid == null || !artMeshes.containsKey(targetGuid)) {
-                    throw new SessionRejection(failureKey, "glue-reference-drift");
+            final List<String> references =
+                new ArrayList<>(host.passThroughReferenceGuids(object));
+            if ("glue".equals(censusFamilyToken(object))) {
+                for (String targetGuid : references) {
+                    if (targetGuid == null || !artMeshes.containsKey(targetGuid)) {
+                        throw new SessionRejection(failureKey, "glue-reference-drift");
+                    }
                 }
             }
-            if (glues.put(guid, new GlueIdentity(
-                id, host.objectLocalName(object),
-                List.copyOf(targets))) != null) {
-                throw new SessionRejection(failureKey);
-            }
+            passThrough.put(guid, new PassThroughIdentity(
+                censusFamilyToken(object),
+                host.objectIdString(object),
+                host.objectLocalName(object),
+                host.sourceTargetDeformerGuid(object),
+                java.util.Collections.unmodifiableList(references),
+                host.passThroughFlagSignature(object)));
         }
+
+        // Physics and motion-sync settings live outside the object census. Each
+        // must carry a pinnable identity — anything else rejects rather than
+        // pass through untracked.
+        final Map<String, SettingsIdentity> physicsSettings =
+            settingsCensus(host.allPhysicsSettings(modelSource), failureKey);
+        final Map<String, SettingsIdentity> motionSyncSettings =
+            settingsCensus(host.allMotionSyncSettings(modelSource), failureKey);
+        final List<String> featureFlags = new ArrayList<>(
+            host.modelFeatureFlags(modelSource));
+        java.util.Collections.sort(featureFlags);
         return new ModelCensus(
             Map.copyOf(parts), Map.copyOf(parameters), Map.copyOf(artMeshes),
-            Map.copyOf(glues));
+            Map.copyOf(passThrough), Map.copyOf(physicsSettings),
+            Map.copyOf(motionSyncSettings), Map.copyOf(embedded),
+            List.copyOf(featureFlags));
+    }
+
+    /**
+     * Identity+signature pin for one settings list. Every entry must be a
+     * recognized settings family with a stable GUID and ID — an object that
+     * cannot be pinned rejects the session rather than riding through unseen.
+     */
+    private Map<String, SettingsIdentity> settingsCensus(
+        final List<?> settings,
+        final String failureKey
+    ) {
+        final Map<String, SettingsIdentity> pinned = new LinkedHashMap<>();
+        for (Object setting : settings) {
+            final String guid = host.settingsGuid(setting);
+            final String id = host.settingsIdString(setting);
+            final List<String> signature = host.settingsSignature(setting);
+            if (guid == null || guid.isBlank() || id == null || id.isBlank()
+                || signature == null) {
+                throw new SessionRejection(failureKey,
+                    "protected-export.unpinnable-settings:"
+                        + settingsFamilyToken(setting));
+            }
+            if (pinned.put(guid, new SettingsIdentity(
+                id, host.settingsName(setting), List.copyOf(signature))) != null) {
+                throw new SessionRejection(failureKey,
+                    "protected-export.unpinnable-settings:duplicate-guid");
+            }
+        }
+        return Map.copyOf(pinned);
+    }
+
+    /** Bounded family token for an unrecognized settings object. */
+    private String settingsFamilyToken(final Object setting) {
+        if (host.isPhysicsSettingsSource(setting)) {
+            return "physics";
+        }
+        if (host.isMotionSyncSettingSource(setting)) {
+            return "motion-sync";
+        }
+        return "unknown";
     }
 
     /** Expected staged parameter contracts from the pre-mutation census. */
@@ -1327,8 +1527,19 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
     /** Glue ID set from the census — the staged output must carry them verbatim. */
     private Set<String> glueIdSet(final ModelCensus census) {
         final Set<String> ids = new LinkedHashSet<>();
-        for (GlueIdentity glue : census.glues().values()) {
-            ids.add(glue.id());
+        for (PassThroughIdentity member : census.passThrough().values()) {
+            if ("glue".equals(member.family())) {
+                ids.add(member.id());
+            }
+        }
+        return Set.copyOf(ids);
+    }
+
+    /** Physics setting ID set from the census — validated against physics3.json. */
+    private Set<String> physicsIdSet(final ModelCensus census) {
+        final Set<String> ids = new LinkedHashSet<>();
+        for (SettingsIdentity setting : census.physicsSettings().values()) {
+            ids.add(setting.id());
         }
         return Set.copyOf(ids);
     }
@@ -1336,7 +1547,10 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
     /**
      * Post-mutation census enforcement: parts and parameters must equal the bound
      * snapshot — flatten may only remove planned deformer GUIDs from part
-     * membership; ArtMeshes must carry exactly their planned obfuscated identity.
+     * membership and re-root pass-through parent edges to {@code null}; ArtMeshes
+     * must carry exactly their planned obfuscated identity; every pass-through
+     * object, settings entry, embedded signature and feature flag must be exactly
+     * what the bound snapshot recorded.
      */
     private void verifyPostMutationCensus(
         final Session session,
@@ -1347,8 +1561,25 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
         if (before == null) {
             throw new SessionRejection(OBFUSCATE_FAILED_KEY);
         }
-        if (!before.parameters().equals(after.parameters())) {
+        // Parameter keys are deliberately excluded from this drift check: the
+        // authored bound-key union legitimately rewrites under flatten — keys
+        // bound on consumed deformers vanish, positions may bake into mesh
+        // grids. Range/default/repeat stay exact; staged key positions are
+        // asserted against the post-mutation census at validation, and binding
+        // correctness is the behavior oracle's contract.
+        if (!before.parameters().keySet().equals(after.parameters().keySet())) {
             throw new SessionRejection(OBFUSCATE_FAILED_KEY, "parameter-identity-drift");
+        }
+        for (Map.Entry<String, ParameterIdentity> entry
+                : before.parameters().entrySet()) {
+            final ParameterIdentity prior = entry.getValue();
+            final ParameterIdentity current = after.parameters().get(entry.getKey());
+            if (Float.compare(prior.min(), current.min()) != 0
+                || Float.compare(prior.max(), current.max()) != 0
+                || Float.compare(prior.defaultValue(), current.defaultValue()) != 0
+                || !Objects.equals(prior.repeat(), current.repeat())) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "parameter-identity-drift");
+            }
         }
         if (!before.parts().keySet().equals(after.parts().keySet())) {
             throw new SessionRejection(OBFUSCATE_FAILED_KEY, "part-identity-drift");
@@ -1366,6 +1597,14 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
             if (!priorChildren.equals(current.childGuids())) {
                 throw new SessionRejection(OBFUSCATE_FAILED_KEY, "part-hierarchy-drift");
             }
+            if (!Objects.equals(prior.targetDeformerGuid(), current.targetDeformerGuid())
+                && current.targetDeformerGuid() != null) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "part-parent-drift");
+            }
+            if (!prior.referenceGuids().equals(current.referenceGuids())
+                || !prior.flags().equals(current.flags())) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "part-reference-drift");
+            }
         }
         if (!before.artMeshes().keySet().equals(after.artMeshes().keySet())) {
             throw new SessionRejection(OBFUSCATE_FAILED_KEY, "artmesh-identity-drift");
@@ -1378,11 +1617,67 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
                 || !target.idToken().equals(current.drawableId())) {
                 throw new SessionRejection(OBFUSCATE_FAILED_KEY, "artmesh-identity-drift");
             }
+            final ArtMeshIdentity prior = before.artMeshes().get(entry.getKey());
+            if (prior != null
+                && (!prior.referenceGuids().equals(current.referenceGuids())
+                    || !prior.flags().equals(current.flags()))) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "artmesh-reference-drift");
+            }
         }
-        // Glue is the untouched pass-through channel: identity, name and mesh
-        // references must be exactly what the bound copy started with.
-        if (!before.glues().equals(after.glues())) {
-            throw new SessionRejection(OBFUSCATE_FAILED_KEY, "glue-identity-drift");
+        // The pass-through channel is untouched: every member's identity, name,
+        // references and flags must be exactly what the bound copy started with.
+        // Only the parent edge may change — and only to null, the re-rooting a
+        // removed parent deformer produces.
+        if (!before.passThrough().keySet().equals(after.passThrough().keySet())) {
+            throw new SessionRejection(OBFUSCATE_FAILED_KEY, "pass-through-identity-drift");
+        }
+        for (Map.Entry<String, PassThroughIdentity> entry
+                : before.passThrough().entrySet()) {
+            final PassThroughIdentity prior = entry.getValue();
+            final PassThroughIdentity current = after.passThrough().get(entry.getKey());
+            if (!prior.family().equals(current.family())
+                || !prior.id().equals(current.id())
+                || !Objects.equals(prior.name(), current.name())) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "pass-through-identity-drift");
+            }
+            if (!Objects.equals(prior.targetDeformerGuid(), current.targetDeformerGuid())
+                && current.targetDeformerGuid() != null) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "pass-through-parent-drift");
+            }
+            if (!prior.referenceGuids().equals(current.referenceGuids())) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "pass-through-reference-drift");
+            }
+            if (!prior.flags().equals(current.flags())) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "pass-through-flag-drift");
+            }
+        }
+        // Settings and content flags never change during a session.
+        if (!before.physicsSettings().equals(after.physicsSettings())
+            || !before.motionSyncSettings().equals(after.motionSyncSettings())) {
+            throw new SessionRejection(OBFUSCATE_FAILED_KEY, "settings-identity-drift");
+        }
+        // The aggregate contain* flag set is pinned at bind (copy must equal the
+        // original) but cannot be asserted post-mutation: the flags derive from
+        // deformer-owned content that flatten legitimately consumes, so a flag
+        // may disappear or appear as a flatten effect rather than a defect.
+        final Map<String, List<String>> survivingEmbedded =
+            new LinkedHashMap<>(before.embeddedContent());
+        flattened.forEach(survivingEmbedded::remove);
+        for (Map.Entry<String, List<String>> entry : survivingEmbedded.entrySet()) {
+            final List<String> current = after.embeddedContent().get(entry.getKey());
+            if (current == null) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "embedded-content-drift");
+            }
+            // Flatten merges deformer keyform content into its target meshes, so
+            // a surviving ArtMesh may legitimately gain embedded entries; it must
+            // never lose one. Untouched members (parts, pass-through) stay exact.
+            if (before.artMeshes().containsKey(entry.getKey())) {
+                if (!current.containsAll(entry.getValue())) {
+                    throw new SessionRejection(OBFUSCATE_FAILED_KEY, "embedded-content-drift");
+                }
+            } else if (!entry.getValue().equals(current)) {
+                throw new SessionRejection(OBFUSCATE_FAILED_KEY, "embedded-content-drift");
+            }
         }
     }
 
@@ -1791,8 +2086,16 @@ public final class ProtectedExportOrchestrator implements AutoCloseable {
         volatile ProtectedExportStaging.BehaviorSnapshot behavior;
         volatile Map<String, ProtectedExportStaging.ParameterExpectation>
             expectedParameters = Map.of();
+        /**
+         * Post-mutation staged contract: same identity fields as
+         * {@link #expectedParameters} but key positions from the ArtMesh-carrier
+         * union only — the sole carriers that serialize moc3 key positions.
+         */
+        volatile Map<String, ProtectedExportStaging.ParameterExpectation>
+            stagedParameters = Map.of();
         volatile Set<String> expectedPartIds = Set.of();
         volatile Set<String> expectedGlueIds = Set.of();
+        volatile Set<String> expectedPhysicsIds = Set.of();
         volatile List<Path> publishedFiles = List.of();
         volatile boolean originalRestored;
         volatile List<String> cleanupErrors = List.of();
